<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.babbel.fallingwords.ui.game.GameFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/score_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:padding="@dimen/spacing_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/words"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_words"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_large"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_score"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_large"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.865"
        tools:text="English" />

    <LinearLayout
        android:id="@+id/layout_restart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        fancy:layout_constraintBottom_toBottomOf="parent"
        fancy:layout_constraintEnd_toEndOf="parent"
        fancy:layout_constraintStart_toStartOf="parent"
        fancy:layout_constraintTop_toTopOf="parent">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_game_over"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/font_xxlarge">

        </TextView>

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/btn_restart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_small"
            fancy:fb_defaultColor="@color/colorAccent"
            fancy:fb_radius="15dp"
            fancy:fb_text="@string/text_restart"
            android:textColor="@android:color/white">

        </mehdi.sakout.fancybuttons.FancyButton>
    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/action_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:padding="@dimen/spacing_small"
        android:animateLayoutChanges="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/btn_wrong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#F44336"
            android:text="@string/text_wrong_answer"
            android:textColor="@android:color/white"
            app:fb_textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            fancy:fb_defaultColor="@color/colorPrimaryDark"
            fancy:fb_radius="20dp"
            fancy:fb_text="@string/text_wrong_answer"
            fancy:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="0"
            android:textSize="@dimen/font_xxlarge"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/btn_correct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#4CAF50"
            android:text="@string/text_correct_answer"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            fancy:fb_defaultColor="@color/green"
            fancy:fb_radius="20dp"
            fancy:fb_text="@string/text_correct_answer"
            fancy:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/falling_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textColor="@android:color/black"
        android:textSize="@dimen/font_xlarge"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/score_view"
        tools:text="Translation" />
    <ImageView
        android:id="@+id/img_answer"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="252dp"
        android:src="@drawable/ic_correct"
        android:visibility="gone"
        fancy:layout_constraintBottom_toTopOf="@+id/word"
        fancy:layout_constraintEnd_toEndOf="parent"
        fancy:layout_constraintStart_toStartOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>